--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
   <h1>Nona Manis Siapa Yang Punya</h1>
   <p><em>Lagu Daerah Maluku</em></p>
   <audio controls autoplay>
-    <source src="Nona Manis Siapa Yang Punya.mp3" type="audio/mpeg">
+    <source src="nona-manis.mp3" type="audio/mpeg">
+
   </audio>
   <div class="lyrics">
 Nona manis siapa yang punya<br>
