--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
 <body>
   <h1>Nona Manis Siapa Yang Punya</h1>
   <p><em>Lagu Daerah Maluku</em></p>
+
   <audio controls autoplay>
     <source src="nona-manis.mp3" type="audio/mpeg">
-
+    Browser Anda tidak mendukung pemutar audio.
   </audio>
+
   <div class="lyrics">
 Nona manis siapa yang punya<br>
 Nona manis siapa yang punya<br>
@@ -48,8 +50,7 @@ Nona manis siapa yang punya<br>
 Nona manis siapa yang punya<br>
 Yang punya ibu saya<br><br>
 
-Ulang 2x
+(Ulangi 2x)
   </div>
 </body>
 </html>
- 
